# hh-work

./: .gitignore  README.md  __init__.py  conftest.py  main.py  pyproject.toml
data/: __init__.py
models/: __init__.py  book.py
services/: __init__.py  book_service.py  file_service.py
tests/: __init__.py  test_book.py  test_book_service.py
ui/: __init__.py  menu.py
