[tool.poetry]
name = "library-management"
version = "0.1.0"
description = "Система управления библиотекой"
authors = ["Artem Mykhailichenko <xdmaik.xdfox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
questionary = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
